--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
-        "symfony/framework-bundle": "~2.3"
+        "symfony/framework-bundle": "~2.3",
+        "ex-syst/security-component": "~0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4"
