--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ex-syst/security-bundle",
+    "name": "exsyst/security-bundle",
     "type": "symfony-bundle",
     "description": "Some security tools to help symfony development",
     "license": "Apache-2.0",
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.3.0",
         "symfony/framework-bundle": "~2.3",
-        "ex-syst/security-component": "~0.0"
+        "exsyst/security-component": "~0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4"
