--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,22 @@
             "name": "EXSyst"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0",
-        "symfony/framework-bundle": "~2.3",
-        "exsyst/security-component": "~0.0"
+        "php": ">=5.5",
+        "symfony/framework-bundle": "^2.7|^3.0",
+        "exsyst/security": "^0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4"
+		"symfony/phpunit-bridge": "~2.7"
     },
-    "autoload": {
-        "psr-0": {
-            "EXSyst\\Bundle\\SecurityBundle": ""
-        }
-    },
-    "target-dir": "EXSyst/Bundle/SecurityBundle"
+	"autoload": {
+		"psr-4": {
+			"EXSyst\\Bundle\\SecurityBundle\\": ""
+		}
+	},
+	"extra": {
+		"branch-alias": {
+			"dev-master": "0.0.x-dev"
+		}
+	}
 }
