--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
         <ini name="error_reporting" value="-1" />
     </php>
     <testsuites>
-        <testsuite name="EXSyst Security Component Test Suite">
+        <testsuite name="EXSyst Security Bundle Test Suite">
             <directory>./Tests/</directory>
         </testsuite>
     </testsuites>
